--- a/ScrapingAnalyser/ScrapingAnalyser.csproj
+++ b/ScrapingAnalyser/ScrapingAnalyser.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IOutputWriter.cs" />
     <Compile Include="Interfaces\IScrapingDataAnalyzer.cs" />
     <Compile Include="Interfaces\IScrapingReportJob.cs" />
     <Compile Include="Interfaces\IWebReader.cs" />
@@ -49,6 +50,9 @@
     <Compile Include="ScrapingReportJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScrapingDataAnalyzer.cs" />
+    <Compile Include="Writers\ConsoleWriter.cs" />
+    <Compile Include="Writers\DiskWriter.cs" />
+    <Compile Include="Writers\LoggerStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
