--- a/ConsoleApp1/App.config
+++ b/ConsoleApp1/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+   <appSettings>
+    <add key="GoogleURL" value="http://www.google.com.au/search?num={0}&amp;q={1}" />
+  </appSettings>
 </configuration>
